# Multi-agent-Malicious-Package-Detector-MA-MPD-

./: .dockerignore  Dockerfile  Dockerfile.streamlit  LICENSE  README.md  config copy.ini  config.ini  docker-compose.yml  env.sample  pyproject.toml
api/: classify.py
src/agents/: ClassificationAgent.py  ClassifyPackagesAgents.py  MetaDataAgent.py  RootAgent.py  classificationAgentsInterface.py
src/databaseSetup/: insert_initial_prompts.py  run_migrations.py
src/mampd_agents/: ClassificationAgent.py  MetaDataAgent.py  RootAgent.py  configure_mampd_agents.py  mampd_agent_interface.py
src/migrations/: V.1.0.0__create_initial_tables.sql  V.1.0.1__grant_access_to_non_user.sql  V.1.0.2__update_prompt_table.sql  V.1.0.3__update_classification_table.sql  V.1.0.4_CREATE_DATASET_TABLE.sql  V.1.0.4__add_groundtruth_column_to_classification.sql
src/scripts/: classify_package.py  setup_logging.py
src/utilities/: extract_package.py  model copy.py  model.py  package_state.py  prompts.py  schemas.py  tools.py
streamlit/: check_malicious_package.py
